# saia_turbovec

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: .flutter-plugins-dependencies  pubspec.yaml
example/.dart_tool/: package_config.json  package_graph.json
example/lib/: main.dart
ios/: saia_turbovec.podspec
ios/Classes/: SaiaTurbovecPlugin.swift
ios/turbovec.xcframework/: Info.plist
lib/: saia_turbovec.dart
lib/data/implementations/: turbovec_bindings.dart  turbovec_index.dart  turbovec_index_impl.dart
lib/domain/models/: turbovec_result.dart
lib/domain/use_cases/: turbovec_index.dart
lib/src/: turbovec_bindings.dart
linux/: CMakeLists.txt
macos/: libturbovec.dylib  saia_turbovec.podspec
macos/Classes/: SaiaTurbovecPlugin.swift
test/: saia_turbovec_benchmark_test.dart  saia_turbovec_test.dart
windows/: CMakeLists.txt
